--- a/apps/sentient_social_web/lib/sentient_social_web/templates/layout/app.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/layout/app.html.eex
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
 
   <body>
