--- a/apps/sentient_social_web/lib/sentient_social_web/templates/layout/app.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/layout/app.html.eex
@@ -81,7 +81,7 @@
                   <ul class="dropdown-menu">
                     <li>
                       <%= if Plug.Conn.get_session(@conn, :current_user) do %>
-                        <%= link "Sign Out", to: auth_path(@conn, :logout), method: :delete %>
+                        <%= link "Log Out", to: auth_path(@conn, :logout), method: :delete %>
                       <% else %>
                         <a href="/auth/twitter">Log In</a>
                       <% end %>
