--- a/apps/sentient_social_web/lib/sentient_social_web/templates/page/index.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/page/index.html.eex
@@ -6,23 +6,29 @@
     <div class="card-content">
       <table class="table">
         <thead>
-          <%= form_for @conn, keywords_path(@conn, :create), fn f -> %>
-            <div class="form-group label-floating is-empty">
-              <label class="control-label">New keyword</label>
-              <%= text_input f, :text, class: "form-control" %>
-              <span class="material-input"></span>
-            </div>
-          <% end %>
-        </thead>
-        <tbody>
           <tr>
-            <td>#something</td>
-            <td class="td-actions text-right">
-              <button type="button" rel="tooltip" title="" class="btn btn-danger btn-simple btn-xs" data-original-title="Remove">
-                <i class="material-icons">close</i>
-              </button>
+            <td colspan="2">
+              <%= form_for @conn, keywords_path(@conn, :create), fn f -> %>
+                <div class="form-group label-floating is-empty">
+                  <label class="control-label">New keyword</label>
+                  <%= text_input f, :text, class: "form-control" %>
+                  <span class="material-input"></span>
+                </div>
+              <% end %>
             </td>
           </tr>
+        </thead>
+        <tbody>
+          <%= for keyword <- @keywords do %>
+            <tr>
+              <td><%= keyword.text %></td>
+              <td class="td-actions text-right">
+                <button type="button" rel="tooltip" title="" class="btn btn-danger btn-simple btn-xs" data-original-title="Remove">
+                  <i class="material-icons">close</i>
+                </button>
+              </td>
+            </tr>
+          <% end %>
         </tbody>
       </table>
     </div>
