--- a/apps/sentient_social_web/lib/sentient_social_web/templates/page/index.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/page/index.html.eex
@@ -34,3 +34,40 @@
     </div>
   </div>
 </div>
+
+<div class="col-lg-3 col-md-6">
+  <div class="card card-nav-tabs">
+    <div class="card-header" data-background-color="purple">
+      <h4 class="title">Muted Keywords</h4>
+    </div>
+    <div class="card-content">
+      <%= form_for @conn, muted_keywords_path(@conn, :create), fn f -> %>
+        <div class="form-group label-floating is-empty">
+          <label class="control-label">Add a muted keyword</label>
+          <%= text_input f, :text, class: "form-control" %>
+          <span class="material-input"></span>
+        </div>
+      <% end %>
+      <table class="table">
+        <tbody>
+          <%= for keyword <- @muted_keywords do %>
+            <tr>
+              <td><%= keyword.text %></td>
+              <td class="td-actions text-right" style="display: block">
+                <%= link(
+                  to: muted_keywords_path(@conn, :delete, keyword.id),
+                  method: "delete",
+                  rel: "tooltip",
+                  data: [original_title: "Remove"],
+                  class: "btn btn-danger btn-simple btn-xs"
+                ) do %>
+                  <i class="material-icons">close</i>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
