Adds tweet_url and handles saving retweeted statuses

--- a/apps/sentient_social_web/lib/sentient_social_web/templates/page/index.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/page/index.html.eex
@@ -93,7 +93,7 @@
           <%= for automated_interaction <- @automated_interactions do %>
             <tr>
               <td><%= automated_interaction.tweet_user_screen_name %></td>
-              <td><%= automated_interaction.tweet_text %></td>
+              <td><a href="<%= automated_interaction.tweet_url %>"><%= automated_interaction.tweet_text %></a></td>
               <td><%= automated_interaction.inserted_at %></td>
             </tr>
           <% end %>
