--- a/apps/sentient_social_web/lib/sentient_social_web/templates/login/index.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/login/index.html.eex
@@ -8,7 +8,7 @@
             <h4 class="title">Welcome to Sentient Social</h4>
           </div>
           <div class="card-content">
-            <div class="social text-center">
+            <div class="text-center">
               <a href="/auth/twitter" class="btn btn-primary" style="background-color: #55acee">
                 <i class="fa fa-twitter"></i>
                 <span style="margin-left: 1rem">Log In with Twitter</span>
