--- a/apps/sentient_social_web/lib/sentient_social_web/templates/landing_page/index.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/landing_page/index.html.eex
@@ -1,58 +1,33 @@
-<div class="signup-page sidebar-collapse">
-<div class="page-header header-filter" filter-color="purple" style="background-image: url('<%= static_path(@conn, "/images/bg7.jpg") %>'); background-size: cover; background-position: top center;">
-  <div class="container" style="padding-top: 10vh;">
-    <div class="row">
-      <div class="col-md-6 ml-auto mr-auto">
-        <div class="card card-signup">
-          <h2 class="card-title text-center">Sign In / Register</h2>
-          <div class="card-body">
-            <div class="row">
-              <div class="col-md-10 ml-auto mr-auto">
-                <div class="info info-horizontal">
-                  <div class="icon icon-rose">
-                    <i class="material-icons">timeline</i>
-                  </div>
-                  <div class="description">
-                    <h4 class="info-title">Lorem Ipsum</h4>
-                    <p class="description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse aliquam, leo id eleifend elementum. Morbi ac maximus ligula.
-                    </p>
-                  </div>
-                </div>
-                <div class="info info-horizontal">
-                  <div class="icon icon-primary">
-                    <i class="material-icons">code</i>
-                  </div>
-                  <div class="description">
-                    <h4 class="info-title">Lorem Ipsum</h4>
-                    <p class="description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse aliquam, leo id eleifend elementum. Morbi ac maximus ligula.
-                    </p>
-                  </div>
-                </div>
-                <div class="info info-horizontal">
-                  <div class="icon icon-info">
-                    <i class="material-icons">group</i>
-                  </div>
-                  <div class="description">
-                    <h4 class="info-title">Lorem Ipsum</h4>
-                    <p class="description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse aliquam, leo id eleifend elementum. Morbi ac maximus ligula.
-                    </p>
-                  </div>
-                </div>
-            <div class="text-center">
-              <a href="/auth/twitter" class="btn btn-primary" style="background-color: #55acee">
-                <i class="fa fa-twitter"></i>
-                <span style="margin-left: 1rem">Log In with Twitter</span>
-              </a>
-            </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+<nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="300">
+  <div class="container">
+    <div class="navbar-translate">
+      <!-- <a class="navbar-brand" href="/">Sentient Social</a> -->
+      <button class="navbar-toggler navbar-toggler-right navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-bar"></span>
+        <span class="navbar-toggler-bar"></span>
+        <span class="navbar-toggler-bar"></span>
+      </button>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarToggler">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a href="/auth/twitter" class="nav-link">Log In</a>
+        </li>
+        <li class="nav-item">
+          <a href="/auth/twitter" class="nav-link">Register</a>
+        </li>
+      </ul>
     </div>
   </div>
-</div>
+</nav>
+<div class="page-header" data-parallax="true" style="background-image: url('<%= static_path(@conn, "/images/login-image-min.jpg") %>');">
+  <div class="filter"></div>
+  <div class="container">
+    <div class="motto text-center">
+      <h1>Sentient Social</h1>
+      <h3>We leverage AI and automation to help you organically engage with your target audience</h3>
+      <br />
+      <a href="/auth/twitter" class="btn btn-outline-neutral btn-round"><i class="fa fa-twitter"></i> Get Started</a>
+    </div>
+  </div>
 </div>
