--- a/apps/sentient_social_web/lib/sentient_social_web/templates/layout/landing_page.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/layout/landing_page.html.eex
@@ -16,14 +16,20 @@
     <title>Sentient Social</title>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='//fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
-    <link href='<%= static_path(@conn, "/css/material-kit.min.css") %>' rel='stylesheet' type='text/css'>
+    <link href="<%= static_path(@conn, "/css/bootstrap.min.css") %>" rel="stylesheet" />
+    <link href="<%= static_path(@conn, "/css/paper-kit.css") %>" rel="stylesheet" />
+    <link href="<%= static_path(@conn, "/css/nucleo-icons.css") %>" rel="stylesheet" />
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
 
   <body>
     <main role="main">
-      <%= render @view_module, @view_template, assigns %>
+    <%= render @view_module, @view_template, assigns %>
     </main>
-    <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+    <script src="<%= static_path(@conn, "/js/jquery-3.2.1.js") %>"></script>
+    <script src="<%= static_path(@conn, "/js/jquery-ui-1.12.1.custom.min.js") %>"></script>
+    <script src="<%= static_path(@conn, "/js/popper.js") %>"></script>
+    <script src="<%= static_path(@conn, "/js//bootstrap.min.js") %>"></script>
+    <script src="<%= static_path(@conn, "/js/paper-kit.js") %>"></script>
   </body>
 </html>
