--- a/apps/sentient_social_web/lib/sentient_social_web/templates/dashboard/index.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/dashboard/index.html.eex
@@ -1,104 +1,121 @@
-<div class="col-lg-3 col-md-6">
-  <div class="card card-nav-tabs">
-    <div class="card-header" data-background-color="purple">
-      <h4 class="title">Keywords</h4>
-      <p class="category">We'll use these keywords to find posts to interact with.</p>
-    </div>
-    <div class="card-content">
-      <%= form_for @conn, keywords_path(@conn, :create), fn f -> %>
-        <div class="form-group label-floating is-empty">
-          <label class="control-label">Add a keyword</label>
-          <%= text_input f, :text, class: "form-control" %>
-          <span class="material-input"></span>
-        </div>
-      <% end %>
-      <table class="table">
-        <tbody>
-          <%= for keyword <- @keywords do %>
-            <tr>
-              <td><%= keyword.text %></td>
-              <td class="td-actions text-right" style="display: block">
-                <%= link(
-                  to: keywords_path(@conn, :delete, keyword.id),
-                  method: "delete",
-                  rel: "tooltip",
-                  data: [original_title: "Remove"],
-                  class: "btn btn-danger btn-simple btn-xs"
-                ) do %>
-                  <i class="material-icons">close</i>
+<div class="row">
+  <div class="col-lg-3 col-md-6">
+    <div class="card card-nav-tabs">
+      <div class="card-header" data-background-color="purple">
+        <h4 class="title">Keywords</h4>
+        <p class="category">We'll use these keywords to find posts to interact with.</p>
+      </div>
+      <div class="card-content">
+        <%= form_for @conn, keywords_path(@conn, :create), fn f -> %>
+          <div class="form-group label-floating is-empty">
+            <label class="control-label">Add a keyword</label>
+            <%= text_input f, :text, class: "form-control" %>
+            <span class="material-input"></span>
+          </div>
+        <% end %>
+        <table class="table">
+          <tbody>
+            <%= for keyword <- @keywords do %>
+              <tr>
+                <td><%= keyword.text %></td>
+                <td class="td-actions text-right" style="display: block">
+                  <%= link( to: keywords_path(@conn, :delete, keyword.id), method: "delete", rel: "tooltip", data: [original_title: "Remove"], class: "btn btn-danger btn-simple btn-xs") do %>
+                    <i class="material-icons">close</i>
                 <% end %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-lg-3 col-md-6">
+    <div class="card card-nav-tabs">
+      <div class="card-header" data-background-color="red">
+        <h4 class="title">Muted Keywords</h4>
+        <p class="category">Posts containing these keywords will be ignored.</p>
+      </div>
+      <div class="card-content">
+        <%= form_for @conn, muted_keywords_path(@conn, :create), fn f -> %>
+          <div class="form-group label-floating is-empty">
+            <label class="control-label">Add a muted keyword</label>
+            <%= text_input f, :text, class: "form-control" %>
+            <span class="material-input"></span>
+          </div>
+        <% end %>
+        <table class="table">
+          <tbody>
+            <%= for keyword <- @muted_keywords do %>
+              <tr>
+                <td><%= keyword.text %></td>
+                <td class="td-actions text-right" style="display: block">
+                  <%= link( to: muted_keywords_path(@conn, :delete, keyword.id), method: "delete", rel: "tooltip", data: [original_title: "Remove"], class: "btn btn-danger btn-simple btn-xs") do %>
+                    <i class="material-icons">close</i>
+                <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
 
-<div class="col-lg-3 col-md-6">
-  <div class="card card-nav-tabs">
-    <div class="card-header" data-background-color="red">
-      <h4 class="title">Muted Keywords</h4>
-      <p class="category">Posts containing these keywords will be ignored.</p>
-    </div>
-    <div class="card-content">
-      <%= form_for @conn, muted_keywords_path(@conn, :create), fn f -> %>
-        <div class="form-group label-floating is-empty">
-          <label class="control-label">Add a muted keyword</label>
-          <%= text_input f, :text, class: "form-control" %>
-          <span class="material-input"></span>
-        </div>
-      <% end %>
-      <table class="table">
-        <tbody>
-          <%= for keyword <- @muted_keywords do %>
+<div class="row">
+  <div class="col-lg-6 col-md-12">
+    <div class="card">
+      <div class="card-header" data-background-color="orange">
+        <h4 class="title">Automated Interactions</h4>
+      </div>
+      <div class="card-content table-responsive">
+        <table class="table table-hover">
+          <thead class="text-warning">
             <tr>
-              <td><%= keyword.text %></td>
-              <td class="td-actions text-right" style="display: block">
-                <%= link(
-                  to: muted_keywords_path(@conn, :delete, keyword.id),
-                  method: "delete",
-                  rel: "tooltip",
-                  data: [original_title: "Remove"],
-                  class: "btn btn-danger btn-simple btn-xs"
-                ) do %>
-                  <i class="material-icons">close</i>
-                <% end %>
-              </td>
+              <th>Username</th>
+              <th>Tweet</th>
+              <th>When</th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
+          </thead>
+          <tbody>
+            <%= for automated_interaction <- @automated_interactions do %>
+              <tr>
+                <td><%= automated_interaction.tweet_user_screen_name %></td>
+                <td><a href="<%= automated_interaction.tweet_url %>"><%= automated_interaction.tweet_text %></a></td>
+                <td><%= automated_interaction.inserted_at %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="col-lg-6 col-md-12">
-  <div class="card">
-    <div class="card-header" data-background-color="orange">
-      <h4 class="title">Automated Interactions</h4>
-      <p class="category">Interactions with other users we've had on your behalf.</p>
-    </div>
-    <div class="card-content table-responsive">
-      <table class="table table-hover">
-        <thead class="text-warning">
-          <tr>
-            <th>Username</th>
-            <th>Tweet</th>
-            <th>When</th>
-          </tr>
-        </thead>
-        <tbody>
-          <%= for automated_interaction <- @automated_interactions do %>
+  <div class="col-lg-6 col-md-12">
+    <div class="card">
+      <div class="card-header" data-background-color="orange">
+        <h4 class="title">Historical Follower Counts</h4>
+      </div>
+      <div class="card-content table-responsive">
+        <table class="table table-hover">
+          <thead class="text-warning">
             <tr>
-              <td><%= automated_interaction.tweet_user_screen_name %></td>
-              <td><a href="<%= automated_interaction.tweet_url %>"><%= automated_interaction.tweet_text %></a></td>
-              <td><%= automated_interaction.inserted_at %></td>
+              <th>Date</th>
+              <th>Count</th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
+          </thead>
+          <tbody>
+            <%= for historical_follower_count <- @historical_follower_counts do %>
+              <tr>
+                <td><%= historical_follower_count.inserted_at %></td>
+                <td><%= historical_follower_count.count %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
