--- a/apps/sentient_social_web/lib/sentient_social_web/templates/landing_page/index.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/landing_page/index.html.eex
@@ -11,10 +11,18 @@
     <div class="collapse navbar-collapse" id="navbarToggler">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a href="/auth/twitter" class="nav-link">Log In</a>
+          <%= if Plug.Conn.get_session(@conn, :current_user) do %>
+            <a href="/dashboard" class="nav-link">Dashboard</a>
+          <% else %>
+            <a href="/login" class="nav-link">Log In</a>
+          <% end %>
         </li>
         <li class="nav-item">
-          <a href="/auth/twitter" class="nav-link">Register</a>
+          <%= if Plug.Conn.get_session(@conn, :current_user) do %>
+            <a href="/logout" class="nav-link">Log Out</a>
+          <% else %>
+            <a href="/auth/twitter" class="nav-link">Register</a>
+          <% end %>
         </li>
       </ul>
     </div>
