--- a/apps/sentient_social_web/lib/sentient_social_web/templates/landing_page/index.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/landing_page/index.html.eex
@@ -21,7 +21,7 @@
           <%= if Plug.Conn.get_session(@conn, :current_user) do %>
             <a href="/logout" class="nav-link">Log Out</a>
           <% else %>
-            <a href="/auth/twitter" class="nav-link">Register</a>
+            <a href="/login" class="nav-link">Register</a>
           <% end %>
         </li>
       </ul>
