--- a/apps/sentient_social_web/lib/sentient_social_web/templates/landing_page/index.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/landing_page/index.html.eex
@@ -19,7 +19,7 @@
         </li>
         <li class="nav-item">
           <%= if Plug.Conn.get_session(@conn, :current_user) do %>
-            <a href="/logout" class="nav-link">Log Out</a>
+            <%= link "Log Out", to: auth_path(@conn, :logout), method: :delete, class: "nav-link" %>
           <% else %>
             <a href="/login" class="nav-link">Register</a>
           <% end %>
