--- a/apps/sentient_social_web/lib/sentient_social_web/templates/login/index.html.eex
+++ b/apps/sentient_social_web/lib/sentient_social_web/templates/login/index.html.eex
@@ -10,16 +10,14 @@
     </div>
     <div class="collapse navbar-collapse" id="navbarToggler">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <%= if Plug.Conn.get_session(@conn, :current_user) do %>
+        <%= if Plug.Conn.get_session(@conn, :current_user) do %>
+          <li class="nav-item">
             <a href="/dashboard" class="nav-link">Dashboard</a>
-          <% end %>
-        </li>
-        <li class="nav-item">
-          <%= if Plug.Conn.get_session(@conn, :current_user) do %>
-            <a href="/logout" class="nav-link">Log Out</a>
-          <% end %>
-        </li>
+          </li>
+          <li class="nav-item">
+            <%= link "Log Out", to: auth_path(@conn, :logout), method: :delete, class: "nav-link" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
