--- a/lib/sentient_social_web/templates/layout/app.html.eex
+++ b/lib/sentient_social_web/templates/layout/app.html.eex
@@ -27,8 +27,7 @@
               <% end %>
             </ul>
         </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
+        <a href="/" class="phx-logo">
         </a>
       </section>
     </header>
