--- a/lib/sentient_social_web/templates/user/show.html.eex
+++ b/lib/sentient_social_web/templates/user/show.html.eex
@@ -1,2 +1,13 @@
 <h1>User</h1>
-<%= render "user.html", user: @user %>
+<p>
+  <%= render "user.html", user: @user %>
+</p>
+
+<h3>Favorite a tweet</h3>
+
+<%= form_for @conn, Routes.favorite_path(@conn, :create), fn f -> %>
+  <div>
+    <%= text_input f, :search_term, placeholder: "Search Term" %>
+    <%= error_tag f, :search_term %>
+  </div>
+<% end %>
