Return updated user from add_token and add_search_term

--- a/lib/sentient_social_web/templates/user/show.html.eex
+++ b/lib/sentient_social_web/templates/user/show.html.eex
@@ -9,5 +9,6 @@
   <div>
     <%= text_input f, :search_term, placeholder: "Search Term" %>
     <%= error_tag f, :search_term %>
+    <%= submit "Favorite" %>
   </div>
 <% end %>
