Move username from user to token and populate it from the auth info
It doesn't really make sense to have the user enter their username when
we go on to log them in with Twitter where we can get it anwyay.

--- a/lib/sentient_social_web/templates/user/user.html.eex
+++ b/lib/sentient_social_web/templates/user/user.html.eex
@@ -1,1 +1,1 @@
-<strong><%= @user.username %></strong> (<%= @user.id %>)
+<strong><%= SentientSocial.Accounts.User.username(@user) %></strong> (<%= @user.id %>)
