Change Twitter.favorite_tweets_by_search_term to handle multiple tweets
Also changed to call show with `include_entities: true` and
`tweet_mode: :extended` to try to make sure it returns all of the
available text and hashtags for extended tweets.

This also seems to cause the `favorited` prop to actually return true
sometimes when you've already favorited the tweet. Though I still can't
figure out why it isn't always accurate. Very cool API. Extremely happy
with it 😠

--- a/lib/sentient_social_web/templates/user/show.html.eex
+++ b/lib/sentient_social_web/templates/user/show.html.eex
@@ -22,6 +22,6 @@
   </div>
 <% end %>
 
-<h3>Favorite a tweet</h3>
+<h3>Favorite tweets</h3>
 
 <%= button("Favorite", to: Routes.favorite_path(@conn, :create), method: "post", class: "btn") %>
